--- a/personal/templates/index.html
+++ b/personal/templates/index.html
@@ -23,6 +23,7 @@
 </head>
 <body class="theme dark">
     {% include 'profile.html' %}
-    {% include 'entries.html' %}      
+    {% include 'entries.html' %}
+    {% include 'footer.html' %}
 </body>
 </html>
