--- a/personal/templates/index.html
+++ b/personal/templates/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'personal/css/main.css' %}">
     <title> Karolis Strazdas </title>
 </head>
-<body class="theme dark" data-theme="dark">
+<body class="theme">
     {% include 'profile.html' %}
     {% include 'entries.html' %}
     {% include 'footer.html' %}
