--- a/personal/templates/profile.html
+++ b/personal/templates/profile.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<button id="theme-switcher" class="icon interactive theme-switcher" data-next-theme="light"></button>
+<button id="theme-switcher" class="icon interactive theme-switcher" data-next-theme="light" aria-label="Theme switcher"></button>
 
 <header class="profile col-gap-2">
     <img src={% static 'personal/images/avatar.jpg' %} alt="{{ user.first_name }} {{ user.last_name }}" class="avatar" />
