Refactoring, add more info,

--- a/personal/templates/entries.html
+++ b/personal/templates/entries.html
@@ -23,7 +23,7 @@
             </div>
 
             <hr/>
-            <h3> Programmer at Indeform Ltd. </h3>
+            <h3> Programmer • Indeform Ltd. </h3>
             <div>
                 <p> Developing dynamic web applications utilizing a full stack technology stack. Responsible for designing
                     and implementing robust solutions, maintaining server configurations, and establishing CI/CD pipelines.
@@ -45,6 +45,68 @@
                 <span> PostgreSQL </span>
                 <span> Nginx </span>
                 <span> Docker </span>
+            </div>
+        </article>
+
+        <article>
+            <div data-timespan>
+                <span> Position </span> &bull;
+                <span> February, 2020 </span> →
+                <span> May, 2020 </span> 
+                <span data-date-from="2020-02-13" data-date-to="2020-05-15" data-duration></span>
+            </div>
+
+            <hr/>
+            <h3> Software Engineering Intern • Indeform Ltd. </h3>
+            <div>
+                <p>
+                    Designed and developed debt recovery management system, utilizing modern technologies and industry best practices.
+                    Contributed to all phases of the software development life cycle, from requirements analysis to system design, implementation, and testing.
+                </p>
+                <ul>
+                    <li> Conducted requirements analysis, working with stakeholder to understand their needs and translate them into software solutions. </li>
+                    <li> Developed wireframes and user interfaces, enhancing the usability and accessibility of the system for users. </li>
+                    <li> Implemented front-end and back-end components, considering performance and ensuring seamless data integration. </li>
+                    <li> Tesitng and debugging the system, ensuring a high level of quality and reliability. </li>
+                </ul>
+            </div>
+            <hr/>
+            <div class="technologies">
+                <span> Requirements analysis </span>
+                <span> Systems design </span>
+                <span> User interface design </span>
+                <span> Back-end development </span>
+                <span> Front-end development </span>
+            </div>
+        </article>
+    </section>
+
+    <section data-content="education">
+        <article>
+            <div data-timespan>
+                <span> Education </span> &bull;
+                <span> September, 2016 </span> →
+                <span> June, 2020 </span> 
+                <span data-date-from="2016-09-01" date-to="2020-06-30" data-duration></span>
+            </div>
+
+            <hr/>
+            <h3> Bachelor's Degree in Software Systems • Kaunas University of Technology. </h3>
+            <div>
+                <p> [Summary] </p>
+                <ul>
+                    <li> [Key point] </li>
+                </ul>
+            </div>
+            <hr/>
+            <div class="technologies">
+                <span> Systems design </span>
+                <span> Discrete mathematics </span>
+                <span> Analysis of algorithms </span>
+                <span> Web technologies </span>
+                <span> Software development </span>
+                <span> Databases </span>
+                <span> UML 2 </span> 
             </div>
         </article>
     </section>
