--- a/personal/templates/entries.html
+++ b/personal/templates/entries.html
@@ -87,16 +87,15 @@
                 <span> Education </span> &bull;
                 <span> September, 2016 </span> →
                 <span> June, 2020 </span> 
-                <span data-date-from="2016-09-01" date-to="2020-06-30" data-duration></span>
+                <span data-date-from="2016-09-01" data-date-to="2020-06-30" data-duration></span>
             </div>
 
             <hr/>
             <h3> Bachelor's Degree in Software Systems • Kaunas University of Technology. </h3>
             <div>
-                <p> [Summary] </p>
-                <ul>
-                    <li> [Key point] </li>
-                </ul>
+                <p> Gained comprehensive knowledge about various aspects of software engineering, computer science, programming languages, tools, data structures, algorithms and so on. Acquired diverse
+                    set of skills prepared me to deal with real-world challenges in software systems.
+                </p>
             </div>
             <hr/>
             <div class="technologies">
@@ -106,7 +105,48 @@
                 <span> Web technologies </span>
                 <span> Software development </span>
                 <span> Databases </span>
-                <span> UML 2 </span> 
+                <span> UML 2 </span>
+            </div>
+        </article>
+    </section>
+
+    <section data-content="projects">
+        <article>
+            <div data-timespan>
+                <span> Projects </span> &bull;
+                <span> September, 2016 </span> →
+                <span> Now </span> 
+                <span data-date-from="2023-03-14" data-duration></span>
+            </div>
+
+            <hr/>
+            <h3> <a class="link bordered" href="https://github.com/Eoic/Papyrus" target="blank"> Papyrus </a> - cross-platform e-book management system </h3>
+            <div>
+                <p>
+                    I really like colecting books, both in physical and digital form, but none of the applications I used so far to track my collections met my expectations - Calible, Google Books, Amazon Kindle, Bookshelf, etc. Some of the main
+                    paint points for me are:
+                </p>
+
+                <ul>
+                    <li> Ugly user interface </li>
+                    <li> Not available on multiple platforms (e.g. mobile, desktop) </li>
+                    <li> Narrow file format support </li>
+                    <li> File size limits </li>
+                    <li> Cannot track physical books </li>
+                </ul>
+
+                <p>
+                    By developing Papyrus I aim to address these issues and and some more interesting features like reading statistics, 
+                    goal tracking, and potentially some social systems for book borrowing. Furthermore, I aim to bring seamless experience to all commonly used platforms - Windows, Linux, Web, Android and iOS.
+                </p>
+            </div>
+            <hr/>
+            <div class="technologies">
+                <span> Flutter </span>
+                <span> Dart </span>
+                <span> Django </span>
+                <span> Python </span>
+                <span> MongoDB + Realm </span>
             </div>
         </article>
     </section>
