--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,6 +95,11 @@ header h3 {
     background-image: url(../images/icons/location.svg);
 }
 
+.icon.email {
+    padding: 2px;
+    background-image: url(../images/icons/email.svg);
+}
+
 .icon.interactive {
     transition: filter 0.3s;
 }
@@ -108,10 +113,10 @@ header h3 {
 }
 
 .icon.medium {
-    min-width: 32px;
-    max-width: 32px;
-    min-height: 32px;
-    max-height: 32px;
+    min-width: 28px;
+    max-width: 28px;
+    min-height: 28px;
+    max-height: 28px;
 }
 
 /* Themes */
