--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,42 +2,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 
 :root {
-    --background-color-dark: #121524;
-    --background-color-light: #ebeef2;
     --text-color-dark: #e4ae00;
     --text-color-light: #494b49;
+    --background-color-dark: #121524;
+    --background-color-light: #ebeef2;
 }
 
 html,
 body {
+    margin: 0 auto;
+    min-width: 46.875rem;
+    max-width: 56.5625rem;
+    box-sizing: border-box;
     font-family: 'Fira Code', sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    box-sizing: border-box;
-    margin: 0 auto;
-    min-width: 750px;
-    max-width: 905px;
-    height: 100%;
+    background-size: clamp(3rem, 10vw, 4rem) clamp(3rem, 10vw, 4rem);
 }
 
 body {
     display: flex;
-    padding: 0 64px;
     flex-direction: column;
+    padding-inline: clamp(1.5rem, 5vw, 4rem);
+    padding-block: 0 clamp(1rem, 5vw, 4rem);
 }
 
 hr {
     border-style: solid;
-    border-width: 1px 0 0 0;
+    border-width: 0.0625rem 0 0 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 48em) {
+
     html,
     body {
         width: 100%;
         min-width: 0;
-        padding: 0 16px;
     }
 }
 
@@ -53,23 +54,22 @@ h1 {
     margin: 0;
 }
 
-/* Layout */
 header h1 {
-    font-size: 3.3rem;
     font-weight: 300;
     line-height: 1em;
+    font-size: clamp(2.5rem, 5vw, 3.5rem);
 }
 
 header h2 {
-    font-size: 1.5rem;
-    font-weight: 300;
     margin: 0;
+    font-weight: 300;
+    font-size: clamp(1.25rem, 5vw, 1.5rem);
 }
 
 header h3 {
-    font-size: 1.25rem;
-    font-weight: 300;
     margin: 0;
+    font-weight: 300;
+    font-size: clamp(1rem, 5vw, 1.25rem);
 }
 
 .profile {
@@ -77,7 +77,7 @@ header h3 {
     row-gap: 1.5rem;
     column-gap: 1.5rem;
     align-items: center;
-    margin-top: 84px;
+    margin-top: 5.25rem;
 }
 
 /* Icons */
@@ -101,7 +101,7 @@ header h3 {
 }
 
 .icon.email {
-    padding: 2px;
+    padding: 0.125rem;
     background-image: url(../images/icons/email.svg);
 }
 
@@ -109,38 +109,11 @@ header h3 {
     transition: filter 0.3s;
 }
 
-.theme.dark .icon.interactive:hover {
-    filter: brightness(2);
-}
-
-.theme.light .icon.interactive:hover {
-    filter: brightness(0.5);
-}
-
 .icon.medium {
-    min-width: 28px;
-    max-width: 28px;
-    min-height: 28px;
-    max-height: 28px;
-}
-
-/* Themes */
-.theme.dark {
-    color: var(--text-color-dark);
-    background-color: var(--background-color-dark);
-}
-
-.theme.light {
-    color: var(--text-color-light);
-    background-color: var(--background-color-light);
-}
-
-.theme.light .tabs {
-    border: 1px solid var(--text-color-light);
-}
-
-.theme.dark .tabs {
-    border: 1px solid var(--text-color-dark);
+    min-width: 1.75rem;
+    max-width: 1.75rem;
+    min-height: 1.75rem;
+    max-height: 1.75rem;
 }
 
 /* Tabs */
@@ -157,37 +130,25 @@ header h3 {
     display: flex;
     overflow: auto;
     list-style: none;
-    border-radius: 6px;
+    border-radius: 0.375rem;
     align-items: stretch;
 }
 
 .tab {
     flex: 1;
     border: 0;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.theme.dark .tab:hover {
-    background-color: #e4af001c;
-}
-
-.theme.light .tab:hover {
-    background-color: #494b491c;
-}
-
-.tab {
-    display: block;
+    padding: 0.25rem 1.25rem;
     cursor: pointer;
-    padding: 4px 20px;
 }
 
 .tab:not(:first-child) {
-    border-left-width: 1px;
+    border-left-width: 0.0625rem;
     border-left-style: solid;
 }
 
@@ -196,46 +157,18 @@ header h3 {
     border-bottom-style: solid;
 }
 
-.theme.dark .tab:not(:first-child) {
-    border-left-color: var(--text-color-dark);
-    border-bottom-color: var(--text-color-dark);
-}
-
-.theme.light .tab:not(:first-child) {
-    border-left-color: var(--text-color-light);
-    border-bottom-color: var(--text-color-light);
-}
-
 .tab:first-child>label {
-    border-radius: 6px 0 0 6px;
+    border-radius: 0.375rem 0 0 0.375rem;
 }
 
 .tab:last-child>label {
-    border-radius: 0 6px 6px 0;
+    border-radius: 0 0.375rem 0.375rem 0;
 }
 
 .tab-content {
-    padding: 12px;
+    padding: 0.75rem;
     display: none;
-    border-radius: 6px;
-}
-
-.theme.dark .tab-content {
-    border: 1px solid var(--text-color-dark);
-}
-
-.theme.light .tab-content {
-    border: 1px solid var(--text-color-light);
-}
-
-.theme.dark .tab-navigator .tab[data-active] {
-    background: var(--text-color-dark);
-    color: var(--background-color-dark);
-}
-
-.theme.light .tab-navigator .tab[data-active] {
-    background: var(--text-color-light);
-    color: var(--background-color-light);
+    border-radius: 0.375rem;
 }
 
 /* Formatting */
@@ -265,11 +198,12 @@ header h3 {
 
 .avatar {
     border-radius: 50%;
-    width: 125px;
-    height: 125px;
+    width: 7.8125rem;
+    height: 7.8125rem;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 64em) {
+
     .profile {
         text-align: center;
         flex-direction: column;
@@ -299,7 +233,7 @@ header h3 {
     }
 
     .tab:not(:last-child) {
-        border-bottom-width: 1px;
+        border-bottom-width: 0.0625rem;
     }
 
     .tab:last-child>label {
@@ -308,22 +242,19 @@ header h3 {
 }
 
 article p.quote {
-    margin-top: 8px;
+    margin-top: 0.5rem;
     font-style: italic;
-    font-size: 1.45em;
+    font-size: 1.45rem;
 }
 
-@media (max-width: 768px) {
-    .profile h1 {
-        font-size: 2.5rem;
-    }
-
+@media (max-width: 48em) {
     article p.quote {
-        font-size: 1.25em;
+        font-size: 1.25rem;
     }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 18.75em) {
+
     .tab {
         text-align: left;
     }
@@ -340,34 +271,75 @@ main section {
 main section[data-active] {
     display: flex;
     flex-direction: column;
-    row-gap: 16px;
+    row-gap: 1rem;
 }
 
 main section article {
-    padding: 16px;
-    border-radius: 6px;
-    border-width: 1px;
+    padding: 1rem;
+    border-radius: 0.375rem;
+    border-width: 0.0625rem;
     border-style: solid;
 }
 
 main section article .technologies {
     display: flex;
-    column-gap: 8px;
-    padding-top: 4px;
+    column-gap: 0.5rem;
+    padding-top: 0.25rem;
     flex-wrap: wrap;
-    row-gap: 8px;
+    row-gap: 0.5rem;
 }
 
 main section article .technologies span {
-    border-width: 1px;
+    border-width: 0.0625rem;
     border-style: solid;
-    border-radius: 6px;
-    padding: 4px 8px;
+    border-radius: 0.375rem;
+    padding: 0.25rem 0.5rem;
+}
+
+/* Themes. */
+.theme-switcher {
+    right: 0;
+    border: 0;
+    margin: 2rem;
+    width: 2.25rem;
+    height: 2.25rem;
+    cursor: pointer;
+    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: transparent;
+}
+
+.theme-switcher:hover {
+    animation: sway 2s infinite alternate ease-in-out;
+}
+
+.theme.light {
+    background-image: radial-gradient(var(--text-color-light) 1px, transparent 0);
+}
+
+.theme.dark {
+    background-image: radial-gradient(var(--text-color-dark) 1px, transparent 0);
+}
+
+.theme.light .theme-switcher {
+    background-image: url("../images/icons/theme-light.svg");
+}
+
+.theme.dark .theme-switcher {
+    background-image: url("../images/icons/theme-dark.svg");
 }
 
 .theme.light main section article,
 .theme.light main section article .technologies span {
     border-color: var(--text-color-light);
+    background-color: var(--background-color-light);
+}
+
+.theme.dark main section article,
+.theme.dark main section article .technologies span {
+    border-color: var(--text-color-dark);
+    background-color: var(--background-color-dark);
 }
 
 .theme.light hr {
@@ -380,73 +352,74 @@ main section article .technologies span {
     border-color: var(--text-color-dark);
 }
 
-.theme.dark main section article,
-.theme.dark main section article .technologies span {
-    border-color: var(--text-color-dark);
+.theme.light .tab {
+    background-color: var(--background-color-light);
 }
 
-footer {
-    padding: 16px 0;
-    text-align: center;
+.theme.dark .tab {
+    background-color: var(--background-color-dark);
 }
 
-/* Theme switcher */
-.theme-switcher {
-    right: 0;
-    margin: 32px;
-    width: 36px;
-    height: 36px;
-    border: 0;
-    cursor: pointer;
-    position: absolute;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-color: transparent;
+.theme.light .tab:not(:first-child) {
+    border-left-color: var(--text-color-light);
+    border-bottom-color: var(--text-color-light);
 }
 
-.theme-switcher:hover {
-    animation: sway 2s infinite alternate ease-in-out;
+.theme.dark .tab:not(:first-child) {
+    border-left-color: var(--text-color-dark);
+    border-bottom-color: var(--text-color-dark);
 }
 
-.theme.dark .theme-switcher {
-    background-image: url(../images/icons/theme-dark.svg);
+.theme.light .tab-content {
+    border: 1px solid var(--text-color-light);
 }
 
-.theme.light .theme-switcher {
-    background-image: url('../images/icons/theme-light.svg');
+.theme.dark .tab-content {
+    border: 1px solid var(--text-color-dark);
 }
 
-@keyframes sway {
-    from {
-        transform: rotate(0deg)
-    }
-
-    50% {
-        transform: rotate(15deg);
-    }
-
-    to {
-        transform: rotate(0deg)
-    }
+.theme.light .tab-navigator .tab[data-active] {
+    background: var(--text-color-light);
+    color: var(--background-color-light);
 }
 
-section>p {
-    margin-top: 0;
-    margin-bottom: 0;
+.theme.dark .tab-navigator .tab[data-active] {
+    background: var(--text-color-dark);
+    color: var(--background-color-dark);
 }
 
-a.link {
-    border-radius: 5px;
-    padding-left: 4px;
-    padding-right: 4px;
-    display: inline-block;
-    transition: background-color 0.3s ease;
+.theme.light .tab:hover {
+    background-color: #d9dce0;
 }
 
-/* Links */
-a.link.bordered {
-    border-bottom-width: 5px;
-    border-bottom-style: solid;
+.theme.dark .tab:hover {
+    background-color: #292620;
+}
+
+.theme.light .icon.interactive:hover {
+    filter: brightness(0.5);
+}
+
+.theme.dark .icon.interactive:hover {
+    filter: brightness(2);
+}
+
+.theme.light {
+    color: var(--text-color-light);
+    background-color: var(--background-color-light);
+}
+
+.theme.dark {
+    color: var(--text-color-dark);
+    background-color: var(--background-color-dark);
+}
+
+.theme.light .tabs {
+    border: 1px solid var(--text-color-light);
+}
+
+.theme.dark .tabs {
+    border: 1px solid var(--text-color-dark);
 }
 
 .theme.light a.link {
@@ -471,6 +444,40 @@ a.link.bordered {
 
 .theme.dark a.link:hover {
     background-color: #e4af007f;
+}
+
+/* Other. */
+@keyframes sway {
+    from {
+        transform: rotate(0deg)
+    }
+
+    50% {
+        transform: rotate(15deg);
+    }
+
+    to {
+        transform: rotate(0deg)
+    }
+}
+
+section>p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+/* Links */
+a.link {
+    border-radius: 5px;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+}
+
+a.link.bordered {
+    border-bottom-width: 5px;
+    border-bottom-style: solid;
 }
 
 p.info {
