--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,7 +137,7 @@ header h3 {
 .tab {
     flex: 1;
     border: 0;
-    font-size: 1.5rem;
+    font-size: clamp(1.125rem, 5vw - 1rem, 1.625rem);
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
