--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@
     --text-color-light: #494b49;
     --background-color-dark: #121524;
     --background-color-light: #ebeef2;
+    --transition-duration: 0ms;
 }
 
 html,
@@ -106,7 +107,7 @@ header h3 {
 }
 
 .icon.interactive {
-    transition: filter 0.3s;
+    transition: filter var(--transition-duration) ease-in-out;
 }
 
 .icon.medium {
@@ -142,9 +143,13 @@ header h3 {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    padding: 0.25rem 1.25rem;
+    transition: background-color var(--transition-duration) ease-in-out, color var(--transition-duration) ease-in-out;
     cursor: pointer;
+}
+
+.tab a {
+    display: block;
+    padding: 0.25rem 1.25rem;
 }
 
 .tab:not(:first-child) {
@@ -265,13 +270,9 @@ main {
 }
 
 main section {
-    display: none;
-}
-
-main section[data-active] {
     display: flex;
-    flex-direction: column;
     row-gap: 1rem;
+    flex-direction: column;
 }
 
 main section article {
@@ -294,6 +295,7 @@ main section article .technologies span {
     border-style: solid;
     border-radius: 0.375rem;
     padding: 0.25rem 0.5rem;
+    transition: color var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out;
 }
 
 /* Themes. */
@@ -342,6 +344,16 @@ main section article .technologies span {
     background-color: var(--background-color-dark);
 }
 
+.theme.light main section article .technologies span:hover {
+    color: var(--background-color-light);
+    background-color: var(--text-color-light);
+}
+
+.theme.dark main section article .technologies span:hover {
+    color: var(--background-color-dark);
+    background-color: var(--text-color-dark);
+}
+
 .theme.light hr {
     color: var(--text-color-light);
     border-color: var(--text-color-light);
@@ -358,6 +370,11 @@ main section article .technologies span {
 
 .theme.dark .tab {
     background-color: var(--background-color-dark);
+}
+
+.theme.light .tab a,
+.theme.dark .tab a {
+    color: inherit;
 }
 
 .theme.light .tab:not(:first-child) {
@@ -472,7 +489,7 @@ a.link {
     padding-left: 0.25rem;
     padding-right: 0.25rem;
     display: inline-block;
-    transition: background-color 0.3s ease;
+    transition: background-color var(--transition-duration) ease-in-out;
 }
 
 a.link.bordered {
